[gd_scene load_steps=3 format=3 uid="uid://c5jqdqnhbvy3n"]

[ext_resource type="Script" path="res://Script/minigame1/result_ui.gd" id="1_7o7k3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5yarq"]
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="ResultUi" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.654232, 0.654232, 0.654232, 1)
script = ExtResource("1_7o7k3")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5yarq")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -56.0
offset_right = 77.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Word to guess:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WordLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.996078, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Agile"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResultLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "You have won in 4 moves"

[node name="Button" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "  Restart minigame"

[node name="Button2" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Go back to main world"

[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
